design changed for user dashboard
